--- a/.github/workflows/vercel-cd.yml
+++ b/.github/workflows/vercel-cd.yml
@@ -3,7 +3,7 @@ name: Vercel Continuos Deployment workflow
 on:
   push:
     branches:
-      - master
+      - main
 env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
